--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,10 @@
 /* inizio nav */
 
 nav{
-    background-color:#698EF0;
+    background-color:#3161E0;
     text-align: center;
     height: 100px;
-    width: 80%;
+    
     margin: auto;
 }
     
@@ -23,36 +23,62 @@ nav{
 #menu nav li a {
     color: white;
     text-decoration: none;
-    padding-right: 20px;
+    padding-right: 30px;
     line-height: 100px;
 }
 
 .imglogo{
-    float: left;
-    margin-left: 5px;
-    margin-top: 30px;
+   vertical-align: middle;
+    margin-right:200px;
+    line-height: 100px;
 }
   
     
 .nav-button{
     background-color: white;
-    border-radius:30%;
+    border-radius: 40%;
     border-style: none;
     color: black;
     text-decoration: none;
-    margin-right: 5px;
-    float: right;
+    margin-left: 200px;
     padding: 10px;
-    margin-top: 30px;
+    
 }
+    
 
 /* fine nav */
 
 
 /* inizio jumbotron */
     
+   .jumbotron{
+       height: 500px;
+       background-image: url(../img/jumbo.png);
+       background-size: cover;
+       color: white;
+       
+       
+   }
+
+   .jumbotron div{
+       width: 40%;
+       text-align: center;
+       margin: auto;
+       font-size: 20px;
+   }
+
+   .jumbotron div li,a{
+       display: inline-block;
+       text-decoration: none;
+   }
     
-    
+   #jumbobutton1{
+       color: black;
+       background-color: white;
+       padding: 20px;
+       border-radius: 30%;
+       margin-right: 30px;
+   }
 
 
     
