--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ nav{
     
 .nav-button{
     background-color: white;
-    border-radius: 40%;
+    border-radius: 40px;
     border-style: none;
     color: black;
     text-decoration: none;
@@ -61,24 +61,47 @@ nav{
    }
 
    .jumbotron div{
-       width: 40%;
+       width: 50%;
        text-align: center;
        margin: auto;
        font-size: 20px;
    }
 
+   h1{
+       padding-top: 40px;
+       padding-bottom: 30px;
+   }
+
+   .jumbotron div p{
+       
+       line-height: 30px;
+   }
+
+   .jumbotron div ul{
+       margin: auto;
+   }
+
    .jumbotron div li,a{
        display: inline-block;
        text-decoration: none;
+      
    }
     
-   #jumbobutton1{
-       color: black;
+   . #jumbobutton1{
+       
        background-color: white;
-       padding: 20px;
-       border-radius: 30%;
-       margin-right: 30px;
+       padding: 15px;
+       border-radius: 40px;
+       margin: 20px;
    }
+   
+   #jumbobutton2{
+    
+    background-color:black;
+    padding: 15px;
+    border-radius: 40px;
+    margin-right: 30px;
+}
 
 
     
