--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
 }
 
 
@@ -73,7 +74,7 @@ nav{
    }
 
    .jumbotron div p{
-       
+       padding-bottom: 10px;
        line-height: 30px;
    }
 
@@ -87,24 +88,82 @@ nav{
       
    }
     
-   . #jumbobutton1{
-       
+    #jumbobutton1 a{
+       color: black;
        background-color: white;
        padding: 15px;
        border-radius: 40px;
        margin: 20px;
    }
    
-   #jumbobutton2{
-    
+   #jumbobutton2 a{
+    color: white;
     background-color:black;
     padding: 15px;
     border-radius: 40px;
-    margin-right: 30px;
+    margin: 20px;
 }
+    
+i{
+    padding: 0 10px;
+}
+
+/* fine jumbotron */
+
+/* inizio main */
+
+
 
 
     
+.sezione{
+    padding: 50px 100px;
+    margin: auto;
+    padding-top: 50px;
+    
+}
+.celeste{
+    background-color:#F3F4F5;
+}
+   
+   
+
+
+.paragrafo {
+    width: 30%;
+}
+    
+h2{
+    margin-bottom: 30px;
+    font-size: 48px;
+}
+    
+.paragrafo p{
+    font-size: 20px;
+    line-height: 25px;
+}
+    
+.destra{
+    float: right;
+}
+   
+.sinistra{
+    float: left;
+}
+
+.sezione::after{
+    content: '';
+    display: block;
+    clear: both;
+}
+    
+.wave{
+    display: block;
+}
+    
+    
+    
+
 
     
     
